chore: use constructor.newinstance
Use getDeclaredConstructor().newInstance()
instead of using the deprecated
class.newInstance()

Closes #9331